Finished intro final version

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <div class="c-header__nav">
                         <nav class="c-nav">
                             <ul class="o-list c-nav__list">
-                                <li class="c-nav__item"><a href="#!" class="is-selected c-nav__link c-nav__link--meta">Technology</a></li>
+                                <li class="is-selected c-nav__item"><a href="#!" class="c-nav__link c-nav__link--meta">Technology</a></li>
                                 <li class="c-nav__item"><a href="#!" class="c-nav__link c-nav__link--meta">Company</a></li>
                                 <li class="c-nav__item"><a href="#!" class="c-nav__link c-nav__link--meta">Publications</a></li>
                             </ul>
