--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
         <meta name="msapplication-TileColor" content="#e85e00">
         <meta name="theme-color" content="#e85e00">
 
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
+        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#3e3ea8">
+        <meta name="msapplication-TileColor" content="#ff0000">
+        <meta name="theme-color" content="#5051db">
+
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/screen.css">
     </head>
@@ -72,73 +80,97 @@
                 </div>    
             </div>
         </section>
-        <section class="o-row o-row--lg">
+        <section class="o-row o-row--lg o-row—neutral-x-light">
             <div class="o-container">
-                <article>
-                    <figure>
-                        <picture>
-                            <source srcset="img/jpg/img-1.jpg" media="(min-width: 992px)">
-                            <source srcset="img/jpg/img-1-landscape@2x.jpg" media="(min-width: 576px)">
-                            <img src="img/jpg/img-1-landscape.jpg" alt="Dr. Jeremy McDuffie, Tennessee Oncology">
-                        </picture>
-                        <figcaption>Dr. Jeremy McDuffie, Tennessee Oncology</figcaption>
-                    </figure>
-                    <header>
-                        <h2>
-                            For Community <br>
-                            Oncology
-                        </h2>
-                    </header>
-                    <p>
-                        OncoCloud is the most comprehensive suite of software and services in community oncology. Using our technology, community clinics are providing better care for patients while remaining efficient, independent and financially successful.
-                    </p>
-                    <p>
-                        <a href="#!">Learn more</a>
-                    </p>
+                <article class="o-section o-section--lg">
+                    <div class="o-layout">
+                        <div class="o-layout__item  u-1-of-2-bp3 o-layout--gutter-sm">
+                            <figure>
+                                <picture>
+                                    <source srcset="img/jpg/img-1.jpg" media="(min-width: 992px)">
+                                    <source srcset="img/jpg/img-1-landscape@2x.jpg" media="(min-width: 576px)">
+                                    <img src="img/jpg/img-1-landscape.jpg" alt="Dr. Jeremy McDuffie, Tennessee Oncology">
+                                </picture>
+                                <figcaption>Dr. Jeremy McDuffie, Tennessee Oncology</figcaption>
+                            </figure>
+                        </div>
+                        <div class="o-layout__item  u-1-of-3-bp2 o-layout o-layout--align-content-center o-layout--gutter-sm">
+                            <div class="o-layout__item">
+                                <header>
+                                    <h2>
+                                        For Community <br>
+                                        Oncology
+                                    </h2>
+                                </header>
+                                <p>
+                                    OncoCloud is the most comprehensive suite of software and services in community oncology. Using our technology, community clinics are providing better care for patients while remaining efficient, independent and financially successful.
+                                </p>
+                                <p>
+                                    <a href="#!">Learn more</a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                 </article>
-                <article>
-                    <figure>
-                        <picture>
-                            <source srcset="img/jpg/img-2.jpg" media="(min-width: 992px)">
-                            <source srcset="img/jpg/img-2-landscape@2x.jpg" media="(min-width: 576px)">
-                            <img src="img/jpg/img-2-landscape.jpg" alt="Dr. Jeremy McDuffie, Tennessee Oncology">
-                        </picture>
-                        <figcaption>The lab at New York Cancer & Blood Specialists</figcaption>
-                    </figure>
-                    <header>
-                        <h2>
-                            For Life <br>
-                            Sciences
-                        </h2>
-                    </header>
-                    <p>
-                        With access to billions of data points on millions of cancer patients treated across our network, Flatiron is changing the way life science companies are using real-world data to accelerate research and generate evidence.
-                    </p>
-                    <p>
-                        <a href="#!">Learn more</a>
-                    </p>
+                <article class="o-row--md">
+                    <div class="o-layout o-layout--row-reverse">
+                        <div class="o-layout__item u-1-of-2-bp3">
+                            <figure>
+                                <picture>
+                                    <source srcset="img/jpg/img-2.jpg" media="(min-width: 992px)">
+                                    <source srcset="img/jpg/img-2-landscape@2x.jpg" media="(min-width: 576px)">
+                                    <img src="img/jpg/img-2-landscape.jpg" alt="Dr. Jeremy McDuffie, Tennessee Oncology">
+                                </picture>
+                                <figcaption>The lab at New York Cancer & Blood Specialists</figcaption>
+                            </figure>
+                        </div>
+                        <div class="o-layout__item u-1-of-2-bp3 o-layout o-layout--align-content-center o-layout--gutter-sm">
+                            <div class="o-layout__item">
+                                <header>
+                                    <h2>
+                                        For Life <br>
+                                        Sciences
+                                    </h2>
+                                </header>
+                                <p>
+                                    With access to billions of data points on millions of cancer patients treated across our network, Flatiron is changing the way life science companies are using real-world data to accelerate research and generate evidence.
+                                </p>
+                                <p>
+                                    <a href="#!">Learn more</a>
+                                </p>
+                            </div>  
+                        </div>
+                    </div>
                 </article>
-                <article>
-                    <figure>
-                        <picture>
-                            <source srcset="img/jpg/img-3.jpg" media="(min-width: 992px)">
-                            <source srcset="img/jpg/img-3-landscape@2x.jpg" media="(min-width: 576px)">
-                            <img src="img/jpg/img-3-landscape.jpg" alt="Dr. Jeremy McDuffie, Tennessee Oncology">
-                        </picture>
-                        <figcaption>The lab at New York Cancer & Blood Specialists</figcaption>
-                    </figure>
-                    <header>
-                        <h2>
-                            For Academics <br>
-                            &amp; Hospitals
-                        </h2>
-                    </header>
-                    <p>
-                        Flatiron’s enriched data infrastructure helps hospitals and academic centers unlock the promise of their EHR data. Researchers and clinicians now have access to research-grade insights from within and beyond the walls of their institution.
-                    </p>
-                    <p>
-                        <a href="#!">Learn more</a>
-                    </p>
+                <article class="o-row--md">
+                    <div class="o-layout">
+                        <div class="o-layout__item u-1-of-2-bp3">
+                            <figure>
+                                <picture>
+                                    <source srcset="img/jpg/img-3.jpg" media="(min-width: 992px)">
+                                    <source srcset="img/jpg/img-3-landscape@2x.jpg" media="(min-width: 576px)">
+                                    <img src="img/jpg/img-3-landscape.jpg" alt="Dr. Jeremy McDuffie, Tennessee Oncology">
+                                </picture>
+                                <figcaption>The lab at New York Cancer & Blood Specialists</figcaption>
+                            </figure>
+                        </div>
+                        <div class="o-layout__item u-1-of-2-bp3 o-layout o-layout--align-content-center">
+                            <div class="o-layout__item">
+                                <header>
+                                    <h2>
+                                        For Academics <br>
+                                        &amp; Hospitals
+                                    </h2>
+                                </header>
+                                <p>
+                                    Flatiron’s enriched data infrastructure helps hospitals and academic centers unlock the promise of their EHR data. Researchers and clinicians now have access to research-grade insights from within and beyond the walls of their institution.
+                                </p>
+                                <p>
+                                    <a href="#!">Learn more</a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                 </article>
             </div>
         </section>
@@ -159,7 +191,7 @@
                     <a href="#!">Join our team</a>
                 </p>
             </div>
-            <div class="o-container">
+            <div class="o-container o-row--lg">
                 <figure>
                     <img src="img/jpg/img-4.jpg" alt="Dr. James Hamrick & Sarika Vora in their weekly team stand-up">
                 </figure>
