--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
                 <div class="o-section o-section--lg">
                     <div class="o-layout">
                         <div class="u-layout__item u-1-of-2-bp3">
-                            <h1>
+                            <h1 class="c-lead c-lead--xxl u-color-primary-base">
                                 Cancer is smart. <br>
                                 Together, we can <br>
                                 be smarter.
                             </h1>
                         </div>
                         <div class="u-layout__item u-1-of-2-bp3">
-                            <p>
+                            <p class="c-lead c-lead--lg">
                                 Accelerating the fight against cancer requires the entire industry to work together. Our products connect community oncologists, academics, hospitals, life science researchers and regulators on a shared technology platform. <br>
                                 Together, we can learn from the experience of every patient.
                             </p>
@@ -97,16 +97,16 @@
                         <div class="o-layout__item  u-1-of-3-bp2 o-layout o-layout--align-content-center o-layout--gutter-sm">
                             <div class="o-layout__item">
                                 <header>
-                                    <h2>
+                                    <h2 class="c-lead c-lead--xxl">
                                         For Community <br>
                                         Oncology
                                     </h2>
                                 </header>
-                                <p>
+                                <p class="c-lead c-lead--lg">
                                     OncoCloud is the most comprehensive suite of software and services in community oncology. Using our technology, community clinics are providing better care for patients while remaining efficient, independent and financially successful.
                                 </p>
                                 <p>
-                                    <a href="#!">Learn more</a>
+                                    <a class="c-link-cta" href="#!">Learn more</a>
                                 </p>
                             </div>
                         </div>
@@ -127,16 +127,16 @@
                         <div class="o-layout__item u-1-of-2-bp3 o-layout o-layout--align-content-center o-layout--gutter-sm">
                             <div class="o-layout__item">
                                 <header>
-                                    <h2>
+                                    <h2 class="c-lead c-lead--xxl">
                                         For Life <br>
                                         Sciences
                                     </h2>
                                 </header>
-                                <p>
+                                <p class="c-lead c-lead--lg">
                                     With access to billions of data points on millions of cancer patients treated across our network, Flatiron is changing the way life science companies are using real-world data to accelerate research and generate evidence.
                                 </p>
                                 <p>
-                                    <a href="#!">Learn more</a>
+                                    <a class="c-link-cta" href="#!">Learn more</a>
                                 </p>
                             </div>  
                         </div>
@@ -157,16 +157,16 @@
                         <div class="o-layout__item u-1-of-2-bp3 o-layout o-layout--align-content-center">
                             <div class="o-layout__item">
                                 <header>
-                                    <h2>
+                                    <h2 class="c-lead c-lead--xxl">
                                         For Academics <br>
                                         &amp; Hospitals
                                     </h2>
                                 </header>
-                                <p>
+                                <p class="c-lead c-lead--lg">
                                     Flatiron’s enriched data infrastructure helps hospitals and academic centers unlock the promise of their EHR data. Researchers and clinicians now have access to research-grade insights from within and beyond the walls of their institution.
                                 </p>
                                 <p>
-                                    <a href="#!">Learn more</a>
+                                    <a class="c-link-cta" href="#!">Learn more</a>
                                 </p>
                             </div>
                         </div>
@@ -175,38 +175,52 @@
             </div>
         </section>
         <section class="o-row o-row--lg">
-            <div class="o-container">
-                <header>
-                    <h2>
-                        Do well by doing good. Join the leading tech company in the fight against cancer.
-                    </h2>
-                </header>
-                <p>
-                    <a href="#!">Our story</a>
-                </p>
-                <p>
-                    <a href="#!">Our values</a>
-                </p>
-                <p>
-                    <a href="#!">Join our team</a>
-                </p>
+            <div class="o-container o-layout o-layout--justify-center">
+                <div class=" o-layout__item u-max-width-md">
+                    <div class=" o-layout o-layout--justify-end">
+                        <div class="o-layout__item">
+                            <header>
+                                <h2 class="u-color-primary-base c-lead c-lead--xxxl">
+                                    Do well by doing good. Join the leading tech company in the fight against cancer.
+                                </h2>
+                            </header>
+                            <div class="o-layout__item o-layout o-layout--justify-start">
+                                <p class="o-layout__item u-1-of-6-bp3">
+                                    <a class="c-link-cta" href="#!">Our story</a>
+                                </p>
+                                <p class="o-layout__item u-1-of-6-bp3">
+                                    <a class="c-link-cta" href="#!">Our values</a>
+                                </p>
+                                <p class="o-layout__item u-1-of-6-bp3">
+                                    <a class="c-link-cta" href="#!">Join our team</a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>   
+                </div>
             </div>
             <div class="o-container o-row--lg">
                 <figure>
                     <img src="img/jpg/img-4.jpg" alt="Dr. James Hamrick & Sarika Vora in their weekly team stand-up">
                 </figure>
-            </div>
-            <div class="o-container">
-                <h3>
-                    Life at Flatiron
-                </h3>
-
-                <p>
-                    The talent and dedication of the people working at Flatiron makes everything we do possible. If you’re passionate about having an impact on accelerating cancer research and improving patient care, we’d love to hear from you.
-                </p>
-                <p>
-                    <a href="#!">Open positions</a>
-                </p>
+                <div class="o-container o-row--md">
+                    <div class="o-layout o-layout--justify-center">
+                        <div class="o-layout__item u-1-of-2">
+                            <h3 class="c-lead c-lead--xl">
+                                Life at Flatiron
+                            </h3>
+                        </div>
+                        
+                        <div class="o-layout__items u-1-of-2">
+                            <p class="c-lead c-lead--lg">
+                                The talent and dedication of the people working at Flatiron makes everything we do possible. If you’re passionate about having an impact on accelerating cancer research and improving patient care, we’d love to hear from you.
+                            </p>
+                            <p>
+                                <a class="c-link-cta" href="#!">Open positions</a>
+                            </p>
+                        </div>
+                    </div> 
+                </div>
             </div>
         </section>
         <section class="o-row o-row--lg">
@@ -219,7 +233,7 @@
                         We will email you to start the conversation. Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     </p>
                     <p>
-                        <a href="#!">Sign me up</a>
+                        <a class="c-link-cta--inverse" href="#!">Sign me up</a>
                     </p>
                 </div>
             </div>
