--- a/index.html
+++ b/index.html
@@ -6,16 +6,14 @@
         <title>Flatiron</title>
         <meta name="description" content="This is my HTML5 boilerplate.">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="msapplication-TileColor" content="#e85e00">
-        <meta name="theme-color" content="#e85e00">
-
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-        <link rel="manifest" href="/site.webmanifest">
-        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#3e3ea8">
-        <meta name="msapplication-TileColor" content="#ff0000">
+        <meta name="msapplication-TileColor" content="#5051db">
         <meta name="theme-color" content="#5051db">
+
+        <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+        <link rel="manifest" href="site.webmanifest">
+        <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5051db">
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/screen.css">
@@ -37,17 +35,18 @@
                     <div class="c-header__nav">
                         <nav class="c-nav">
                             <ul class="o-list c-nav__list">
-                                <li class="is-selected c-nav__item"><a href="#!" class="c-nav__link c-nav__link--meta">Technology</a></li>
-                                <li class="c-nav__item"><a href="#!" class="c-nav__link c-nav__link--meta">Company</a></li>
-                                <li class="c-nav__item"><a href="#!" class="c-nav__link c-nav__link--meta">Publications</a></li>
+                                <li class="is-selected c-nav__item"><a class="c-nav__link" href="#!">Technology</a></li>
+                                <li class="c-nav__item"><a class="c-nav__link" href="#!">Company</a></li>
+                                <li class="c-nav__item"><a class="c-nav__link" href="#!">Publications</a></li>
                             </ul>
                         </nav>
                     </div>
                     <div class="c-header__nav">
                         <nav class="c-nav c-nav--meta">
                             <ul class="o-list c-nav__list">
-                                <li class="c-nav__item"><a href="#!" class="c-nav__link">Careers</a></li>
-                                <li class="c-nav__item"><a href="#!" class="c-nav__link">Blog</a></li>
+                                <li class="c-nav__item"><a class="c-nav__link c-nav__link-meta" href="#!">Careers</a></li>
+                                <li class="c-nav__item"><a class="c-nav__link c-nav__link-meta" href="#!">Blog</a></li>
+                                <li class="c-nav__item"><a class="c-nav__link c-nav__link-meta" href="#!">About </a></li>
                             </ul>
                         </nav>
                     </div>
@@ -223,18 +222,22 @@
                 </div>
             </div>
         </section>
-        <section class="o-row o-row--lg">
+        <section class="o-row o-row--lg o-gradient">
             <div class="o-container">
-                <div class="u-max-width-xs">
-                    <h2>
-                        Let us tell you more.
-                    </h2>
-                    <p>
-                        We will email you to start the conversation. Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    </p>
-                    <p>
-                        <a class="c-link-cta--inverse" href="#!">Sign me up</a>
-                    </p>
+                <div class="o-layout o-layout--gutter-lg">
+                    <div class="o-layout__item u-1-of-2-bp2">
+                        <div class="u-max-width-xs">
+                            <h2 class="c-lead c-lead--xl">
+                                Let us tell you more.
+                            </h2>
+                            <p>
+                                We will email you to start the conversation. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            </p>
+                            <p>
+                                <a class="c-link-cta c-link-cta--inverse" href="#!">Sign me up</a>
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
